k8s/03-backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-svc
spec:
  type: ClusterIP
  selector:
    app: ticketcore-backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
