k8s/07-postgres.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-deployment
  labels:
    app: ticketcore-postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ticketcore-postgres
  template:
    metadata:
      labels:
        app: ticketcore-postgres
    spec:
      containers:
        - name: postgres
          image: postgres:15-alpine
          ports:
            - containerPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-svc
spec:
  selector:
    app: ticketcore-postgres
  ports:
    - port: 5432
