k8s/08-redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-deployment
  labels:
    app: ticketcore-redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ticketcore-redis
  template:
    metadata:
      labels:
        app: ticketcore-redis
    spec:
      containers:
        - name: redis
          image: redis:7-alpine
          ports:
            - containerPort: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: redis-svc
spec:
  selector:
    app: ticketcore-redis
  ports:
    - port: 6379
