k8s/10-pgbouncer-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pgbouncer-deployment
  labels:
    app: ticketcore-pgbouncer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ticketcore-pgbouncer
  template:
    metadata:
      labels:
        app: ticketcore-pgbouncer
    spec:
      containers:
        - name: pgbouncer
          image: edoburu/pgbouncer:latest
          ports:
            - containerPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: pgbouncer-svc
spec:
  selector:
    app: ticketcore-pgbouncer
  ports:
    - port: 5432
